# smartgpt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  config.example.yml  docker-compose.yaml  example config.yml  files.txt  rustfmt.toml  test.txt
src/: chunk.rs  commandrunner.rs  commands.rs  config.rs  lib.rs  llm.rs  log.rs  main.rs  parse.rs  plugin.rs  prompt.rs  run.rs  tools.rs
src/agents/: boss.rs  employee.rs  manager.rs  minion.rs  mod.rs
src/agents/minion/: continuous.rs  lua.rs  mod.rs  prompts.rs  script.rs
src/api/: mod.rs  smartgpt.rs
src/api/config/: default.rs  mod.rs
src/auto/: classify.rs  employee.rs  findings.rs  manager.rs  mod.rs  responses.rs  run.rs
src/auto/agents/: context.rs  employee.rs  findings.rs  manager.rs  mod.rs  processing.rs
src/auto/agents/employee/: actor.rs  adept.rs  brain.rs  brainstormer.rs  executor.rs  methodical.rs  mod.rs  plan.rs  planner.rs  prompt.rs  react.rs  refine.rs  reflector.rs  tools.rs
src/auto/agents/prompt/: adept.rs  methodical.rs  mod.rs
src/auto/agents/worker/: actor.rs  adept.rs  methodical.rs  mod.rs  tools.rs  updates.rs
src/config/: default.rs  mod.rs
src/llm/: chatgpt.rs  llama.rs  mod.rs
src/llms/: chatgpt.rs  local.rs  mod.rs
src/llms/palm2/: api.rs  mod.rs  system.rs  types.rs
src/memory/: faiss_memory.rs  local.rs  mod.rs  qdrant.rs  redis.rs
src/memory/qdrant/: system.rs  utils.rs
src/memory/redis/: mod.rs  system.rs  utils.rs
src/plugins/: mod.rs
src/plugins/assets/: mod.rs
src/plugins/brainstorm/: mod.rs
src/plugins/browse/: extract.rs  mod.rs
src/plugins/browse/headless/: mod.rs
src/plugins/chatgpt/: mod.rs
src/plugins/filesystem/: mod.rs
src/plugins/google/: mod.rs  types.rs
src/plugins/memory/: encode.rs  mod.rs
src/plugins/news/: mod.rs  types.rs
src/plugins/none/: mod.rs
src/plugins/shutdown/: mod.rs
src/plugins/think_myself/: mod.rs
src/plugins/wikipedia/: mod.rs  types.rs
src/plugins/wolfram/: mod.rs
src/runner/: convert.rs  mod.rs  parse.rs  query.rs  run.rs  scriptvalue.rs
