[package]
name = "smartgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-openai = "0.10"
async-recursion = "1.0"
async-trait = "0.1"
colored = "2.0"
json5 = "0.4"
llm = "0.1"
num-traits = "0.2"
qdrant-client = "1.1"
rand = "0.8"
redis = { version = "0.23", features = ["tokio-comp", "json"] }
regex = "1.7"
reqwest = "0.11"
rustpython-parser = "0.2"
select = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.9"
textwrap = "0.16"
tiktoken-rs = { version = "0.4", features = ["async-openai"] }
tokenizers = "0.13"
tokio = { version= "1.27", features = ["macros", "io-util", "rt", "rt-multi-thread"] }
tonic = "0.9"
