[package]
name = "smartgpt"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "A crate that provides LLMs with the ability to complete complex tasks using plugins."
homepage = "https://smartgpt.dev"
repository = "https://github.com/Cormanz/smartgpt"
documentation = "https://corman.gitbook.io/smartgpt/"
keywords = [ "llm", "agent", "autogpt" ]
readme = "README.md"

[dependencies]
async-openai = "0.10.2"
async-recursion = "1.0.4"
async-trait = "0.1.68"
colored = "2.0.0"
num-traits = "0.2.15"
regex = "1.7.3"
reqwest = "0.11.16"
rustpython-parser = "0.2.0"
select = "0.6.0"
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tokenizers = "0.13.3"
tokio = { version = "1.27.0", features = ["macros", "io-util", "rt", "rt-multi-thread"] }
tiktoken-rs = { version = "0.4.1", features = ["async-openai"] }
rand = "0.8.5"
textwrap = "0.16.0"
json5 = "0.4.1"
llm = "0.1.1"
readability = "0.2.0"
redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
qdrant-client = "1.1.2"
anyhow = "1.0.71"
tonic = "0.9.2"
base64 = "0.21.0"
